vlib/v/checker/tests/infix_is_unknown_generic_type_sumtype_no_duplicate_err.out
vlib/v/checker/tests/infix_is_unknown_generic_type_sumtype_no_duplicate_err.vv:9:14: error: is: type `Box[Missing]` does not exist
    7 | fn main() {
    8 |     v := Sum(1)
    9 |     if v is Box[Missing] {
      |                 ~~~~~~~
   10 |         println('yes')
   11 |     }
