vlib/v/checker/tests/infix_is_unknown_generic_type_sumtype_no_duplicate_err.vv
struct Box[T] {
	val T
}

type Sum = Box[int] | int

fn main() {
	v := Sum(1)
	if v is Box[Missing] {
		println('yes')
	}
}
